Fixed the problerm of content not showing when loading the app

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
  * Use this CSS to learn some intersting techniques,
  * in case you're wondering how I built the UI.
- * Have fun! 😁
+ * Have fun! 
  */
 
 * {
@@ -94,7 +94,7 @@ nav {
   gap: 2rem;
 
   /* NOTE This creates the fade in/out anumation */
-  opacity: 0;
+  opacity: 100%;
   transition: all 1s;
 }
 
